[project]
name = "nasa-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "google-cloud-bigquery>=3.36.0",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]
